<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/appback"
    >

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="@color/background"
        android:gravity="bottom|right"
        android:inputType="numberDecimal"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="65dp" />

   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"

       >
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <Button
               android:id="@+id/acbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/ac"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:layout_margin="5dp"
               android:backgroundTint="@color/buttonback"
               android:onClick="acevent"
               />

           <Button
               android:id="@+id/divisionbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/division"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="operatorevent"/>
           <Button
               android:id="@+id/perbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/perbutton"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="operatorevent"/>
           <Button
               android:id="@+id/delbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/del"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:layout_margin="5dp"
               android:backgroundTint="@color/buttonback"/>

       </TableRow>
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <Button
               android:id="@+id/sevenbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/seven"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"
               />
           <Button
               android:id="@+id/eightbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/eight"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/ninebutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/nine"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/multiplybutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/multiply"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="operatorevent"/>

       </TableRow>
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <Button
               android:id="@+id/fourbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/four"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/fivebutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/five"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/sixbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/six"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/minusbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/minus"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="operatorevent"/>

       </TableRow>
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <Button
               android:id="@+id/onebutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/one"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/twobutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/two"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/threebutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/three"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/plusbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/plus"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="operatorevent"/>

       </TableRow>
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <Button
               android:id="@+id/plusminusbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/plusminus"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:layout_margin="3dp"
               android:backgroundTint="@color/buttonback"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/zerobutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/zero"
               app:rippleColor="#D50000"
               android:textSize="20sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="1dp"
               android:onClick="numberevent"
               />
           <Button
               android:id="@+id/decimalbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/dot"
               app:rippleColor="#D50000"
               android:textSize="35sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="numberevent"/>
           <Button
               android:id="@+id/equalbutton"
               android:layout_weight="1"
               android:layout_height="40pt"
               android:text="@string/equals"
               app:rippleColor="#D50000"
               android:textSize="35sp"
               android:backgroundTint="@color/buttonback"
               android:layout_margin="5dp"
               android:onClick="equalevent"/>


       </TableRow>


   </TableLayout>


</LinearLayout>